--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/images/fav.png" />
+    <link rel="icon" href="%PUBLIC_URL%/fav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="全台公車動態時刻查詢應用服務專案，使用React框架與Axios串接TDX API服務。"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/fav.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/fav.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
